[tool.poetry]
name = "chat-search"
version = "0.1.7"
description = ""
authors = ["Hemslo Wang <hemslo.wang@gmail.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.3"
huggingface-hub = "^0.24.0"
langchain = "^0.2.10"
langchain-community = "^0.2.9"
langchain-openai = "^0.1.17"
langserve = { extras = ["server"], version = "^0.2.2" }
lark = "^1.1.9"
lxml = "^5.2.2"
opentelemetry-distro = { extras = ["oltp"], version = "^0.46b0" }
opentelemetry-exporter-otlp = "^1.25.0"
opentelemetry-instrumentation = "^0.46b0"
opentelemetry-instrumentation-aiohttp-client = "0.46b0"
opentelemetry-instrumentation-asgi = "0.46b0"
opentelemetry-instrumentation-aws-lambda = "0.46b0"
opentelemetry-instrumentation-dbapi = "0.46b0"
opentelemetry-instrumentation-fastapi = "0.46b0"
opentelemetry-instrumentation-grpc = "0.46b0"
opentelemetry-instrumentation-httpx = "0.46b0"
opentelemetry-instrumentation-logging = "0.46b0"
opentelemetry-instrumentation-redis = "0.46b0"
opentelemetry-instrumentation-requests = "0.46b0"
opentelemetry-instrumentation-sqlalchemy = "0.46b0"
opentelemetry-instrumentation-sqlite3 = "0.46b0"
opentelemetry-instrumentation-threading= "0.46b0"
opentelemetry-instrumentation-tortoiseorm = "0.46b0"
opentelemetry-instrumentation-urllib = "0.46b0"
opentelemetry-instrumentation-urllib3 = "0.46b0"
opentelemetry-instrumentation-wsgi = "0.46b0"
pydantic = "<2"
pyroscope-io = "^0.8.7"
python = "^3.11, <3.12.4"
python-dotenv = "^1.0.0"
redis = "^5.0.7"
tqdm = "^4.66.4"
uvicorn = "^0.23.2"

[tool.poetry.group.dev.dependencies]
langchain-cli = "^0.0.25"
ruff = "^0.5.4"
redisvl = "^0.0.7"

[tool.poetry.scripts]
crawl = "app.client.crawl:main"

[tool.ruff.lint]
extend-select = ["I"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
